<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:orientation="vertical"
    tools:context=".ui.forgotpassword.ActivityForgotPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_ui">

        <include layout="@layout/header" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_26sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:orientation="vertical">


        <com.shreya_scademy.app.utils.widgets.CustomTextBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_2sdp"
            android:text="@string/forgot_your_password"
            android:textColor="@color/colorText"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />
        <com.shreya_scademy.app.utils.widgets.CustomSmallText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_2sdp"
            android:text="@string/Enter_your_registered_email"
            android:textColor="@color/colorText"
            android:textSize="@dimen/_12sdp"
            />
    </LinearLayout>


    <com.shreya_scademy.app.utils.widgets.CustomEditText

        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/login_edit_grad"
        android:hint="@string/EnterEmailHere"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="@dimen/_10sdp"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textColor="@color/colorText"
        android:textDirection="locale" />

    <RelativeLayout

        android:id="@+id/confirm_button"
        android:layout_width="@dimen/_165sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_34sdp">

        <ImageView
            android:layout_width="@dimen/_155sdp"
            android:layout_height="@dimen/_70sdp"
            android:src="@drawable/backbutton" />

        <com.shreya_scademy.app.utils.widgets.CustomSmallText
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_55sdp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/Submit"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />

    </RelativeLayout>


    <com.shreya_scademy.app.utils.widgets.CustomSmallText
        android:id="@+id/msgTv"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_55sdp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="@dimen/_4sdp"
        android:textSize="@dimen/_13sdp" />


</LinearLayout>