<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.multibatch.ActivityMultiBatchHome">
    <include layout="@layout/header" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:layout_marginBottom="@dimen/_40sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/back_curve_grey"
            android:paddingTop="@dimen/_12sdp"
            android:paddingLeft="@dimen/_2sdp"
            android:orientation="vertical"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rlBatchBuyed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:paddingLeft="@dimen/_2sdp"
                android:paddingRight="@dimen/_2sdp" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_30sdp"
                android:layout_margin="@dimen/_20sdp"
                android:id="@+id/noResult"
                android:visibility="gone"
                android:src="@drawable/noresults"/>


        </LinearLayout></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@drawable/backcurve"
        android:layout_height="@dimen/_40sdp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:drawableTop="@drawable/ic_baseline_home_24"
            android:gravity="center"
            android:id="@+id/home"
            android:text="@string/home"
            android:textColor="@color/white" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/tvMove"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/white"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20sdp"
                android:gravity="center"
                android:src="@drawable/ic_baseline_import_contacts_24"
                app:tint="@color/white" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="-1dp"
                android:text="@string/my_batches"/></LinearLayout>


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
        android:layout_gravity="center"
            android:id="@+id/settings"
           android:drawableTop="@drawable/ic_baseline_settings_24"
            android:text="@string/Settings"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>