<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.library.ActivityLibrary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:background="@drawable/back_ui"
        android:orientation="vertical">

        <include layout="@layout/header" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/book"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginLeft="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_39sdp"
        android:layout_marginRight="@dimen/_14sdp"
        android:background="@drawable/back_adapter_white"
        android:elevation="1dp"
        android:gravity="center"
        android:paddingLeft="@dimen/_6sdp">

        <ImageView
            android:id="@+id/ivTicket"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
           android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_12sdp"
            android:padding="@dimen/_3sdp"

            android:scaleType="fitXY"
            android:src="@drawable/books" />

        <com.shreya_scademy.app.utils.widgets.CustomTextSemiBold
            android:id="@+id/tvTittle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_below="@+id/ivTicket"
            android:layout_marginBottom="@dimen/_6sdp"
            android:text="@string/Books"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorText" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginLeft="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_14sdp"
        android:background="@drawable/back_adapter_white"
        android:elevation="1dp"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/_6sdp">

        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
        android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_12sdp"
            android:id="@+id/notesimg"
            android:padding="@dimen/_3sdp"
            android:scaleType="fitXY"
            android:src="@drawable/notetaking" />

        <com.shreya_scademy.app.utils.widgets.CustomTextSemiBold
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_6sdp"
            android:layout_below="@+id/notesimg"
            android:layout_centerHorizontal="true"
            android:text="@string/Notes"

            android:textColor="@color/colorText" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/oldPapers"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginLeft="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_14sdp"
        android:background="@drawable/back_adapter_white"
        android:elevation="1dp"
        android:orientation="horizontal"
    >

        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerHorizontal="true"
            android:id="@+id/imgPaper"
            android:padding="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:scaleType="fitXY"
            android:src="@drawable/paper" />

        <com.shreya_scademy.app.utils.widgets.CustomTextSemiBold
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_6sdp"
            android:layout_below="@+id/imgPaper"
            android:layout_centerHorizontal="true"

            android:text="@string/old_papers"

            android:textColor="@color/colorText" />
    </RelativeLayout>

</LinearLayout>